--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/MainWindow.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/MainWindow.xaml
@@ -2,7 +2,8 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" 
-        Title="MainWindow" Height="1018" Width="1280" AllowsTransparency="True" WindowStyle="None"
+        Title="MainWindow" MinHeight="1000" MinWidth="1200" AllowsTransparency="True" WindowStyle="None"
+        WindowState="Maximized"
         WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,0,10" OpacityMask="White">
         <Canvas Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Width="1280" Margin="0,3,0,0" >
