--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/App.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="MockupProject_K30_DotNet.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View/MainWindow.xaml">
+             StartupUri="View/MainApplication.xaml">
     <Application.Resources>
          
     </Application.Resources>
