--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/LoadingWindow.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/LoadingWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="MockupProject_K30_DotNet.LoadingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        WindowState="Maximized" WindowStyle="None"
-        Title="LoadingWindow" MinHeight="1000" MinWidth="1200" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        WindowStyle="None" AllowsTransparency="True" Background="Transparent"
+        Title="LoadingWindow" Height="638" Width="460" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Window.Resources>
         <Storyboard x:Key="StoryboardLoading">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="path">
@@ -25,11 +25,9 @@
             <BeginStoryboard Storyboard="{StaticResource StoryboardLoading}"/>
         </EventTrigger>
     </Window.Triggers>
-    <Canvas x:Name="Loading_App_Logo_path_" HorizontalAlignment="Left" Height="1024" UseLayoutRounding="False" VerticalAlignment="Top" Width="1280" Margin="0,0,-298,0">
-        <Canvas x:Name="Layer_2" Height="1024" Canvas.Left="0" Canvas.Top="0" Width="1280">
-            <Path Data="F1M0,1080L1920,1080 1920,0 0,0z" Fill="#FFB4B4B4" Height="1024" Canvas.Left="0" Canvas.Top="0" Width="1280" Stretch="Fill"/>
-        </Canvas>
-        <Canvas x:Name="Layer_1" Height="640" Canvas.Left="438" Canvas.Top="208" Width="460">
+    <Canvas x:Name="Loading_App_Logo_path_" HorizontalAlignment="Left" Height="640.418" UseLayoutRounding="False" VerticalAlignment="Top" Width="456" Margin="0,0,-8,-8.418">
+
+        <Canvas x:Name="Layer_1" Height="614" Canvas.Left="14" Canvas.Top="11" Width="428">
             <Path Data="F1M460,460L425,460 35,460 0,460 0,35C0,15.75,15.75,0,35,0L425,0C444.25,0,460,15.75,460,35z" Fill="#FFD71A21" Height="460" Canvas.Left="-14" Canvas.Top="-11" Width="460"/>
             <Path Data="F1M460,145C460,164.25,444.25,180,425,180L35,180C15.75,180,0,164.25,0,145L0,0 35,0 425,0 460,0z" Fill="#FF231F20" Height="180" Canvas.Left="-14" Canvas.Top="449" Width="460"/>
             <Path Data="F1M0,25.503L7.732,25.503 7.732,15.96 24.046,15.96 24.046,25.503 31.78,25.503 31.78,0.285 24.046,0.285 24.046,9.273 7.732,9.273 7.732,0.285 0,0.285z M34.534,25.503L43.174,25.503 45.436,21.045 61.113,21.045 63.521,25.503 72.124,25.503 58.257,0.285 48.188,0.285z M53.206,6.131L58.226,15.613 48.326,15.613z M74.882,25.503L100,25.503 100,19.028 82.612,19.028 82.612,0.285 74.882,0.285z M103.282,25.503L128.4,25.503 128.4,19.028 111.016,19.028 111.016,0.285 103.282,0.285z M132.098,25.503L139.834,25.503 139.834,0.285 132.098,0.285z M145.48,25.503L170.112,25.503C174.536,25.503 177.808,24.356 177.808,18.818 177.808,15.017 176.556,13.205 173.178,12.786L173.178,12.687C175.336,12.059 176.904,11.22 176.904,6.9 176.904,1.951 173.912,0.285 167.746,0.285L145.48,0.285z M153.208,15.505L167.082,15.505C168.754,15.505 169.872,15.884 169.872,17.596 169.872,19.063 168.754,19.447 167.082,19.447L153.208,19.447z M153.208,6.341L166.908,6.341C168.334,6.341 169.176,6.864 169.176,8.329 169.176,9.759 168.334,10.282 166.908,10.282L153.208,10.282z M182.486,16.524C182.486,22.79,185.722,25.788,192.83,25.788L203.912,25.788C211.02,25.788,214.264,22.79,214.264,16.524L214.264,0.285 206.53,0.285 206.53,14.848C206.53,18.056,205.378,19.311,202.208,19.311L194.542,19.311C191.366,19.311,190.218,18.056,190.218,14.848L190.218,0.285 182.486,0.285z M227.226,6.55L239.322,6.55C241.762,6.55,242.878,6.964,242.878,9.2L242.878,10.038C242.878,11.853,242.108,12.687,240.02,12.687L227.226,12.687z M219.49,25.503L227.226,25.503 227.226,18.956 239.39,18.956C241.796,18.956,242.56,19.826,242.56,22.475L242.56,25.503 250.292,25.503 250.292,21.218C250.292,17.077,248.376,16.059,246.076,15.645L246.076,15.575C249.632,14.74,250.4,12.751,250.4,9.374L250.4,7.768C250.4,3.243,248.796,0.285,242.84,0.285L219.49,0.285z M253.78,6.55L264.656,6.55 264.656,25.503 272.382,25.503 272.382,6.55 283.262,6.55 283.262,0.285 253.78,0.285z M286.088,16.658C286.088,24.047,290.232,25.788,297.2,25.788L309.606,25.788C316.576,25.788,320.718,24.047,320.718,16.658L320.718,9.124C320.718,1.741,316.576,0,309.606,0L297.2,0C290.232,0,286.088,1.741,286.088,9.124z M294.024,11.534C294.024,8.396,294.794,6.481,298.87,6.481L307.936,6.481C312.012,6.481,312.778,8.396,312.778,11.534L312.778,14.253C312.778,17.916,312.012,19.311,308.348,19.311L298.456,19.311C294.794,19.311,294.024,17.916,294.024,14.253z M325.394,25.503L333.126,25.503 333.126,7.177 333.192,7.177 347.726,25.503 359.708,25.503 359.708,0.285 351.982,0.285 351.982,18.611 351.912,18.611 337.376,0.285 325.394,0.285z" Fill="White" Height="25.788" Canvas.Left="36.146" Canvas.Top="479.106" Width="359.708"/>
