--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/LoadingWindow.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/LoadingWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="MockupProject_K30_DotNet.LoadingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        WindowStyle="None" AllowsTransparency="True" Background="Transparent"
-        Title="LoadingWindow" Height="638" Width="460" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        WindowStyle="None" AllowsTransparency="True" Background="{x:Null}"
+        Title="LoadingWindow" Height="638" Width="460" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Foreground="{x:Null}">
     <Window.Resources>
         <Storyboard x:Key="StoryboardLoading">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="path">
