--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/MainApplication.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/MainApplication.xaml
@@ -1,13 +1,14 @@
 ﻿<Window x:Class="MockupProject_K30_DotNet.View.MainApplication"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         Title="MainApplication" 
         MinHeight="800" MinWidth="1000" AllowsTransparency="True" WindowStyle="None"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid VerticalAlignment="Top" MouseDown="Grid_MouseDown">
-            <Path Data="F1M1336.02,24L0,24 0,0 1336.02,0z" Fill="#FFF1F1F1" Height="24" Stretch="Fill"/>            
+            <Path Data="F1M1336.02,24L0,24 0,0 1336.02,0z" Fill="#FFF1F1F1" Height="24" Stretch="Fill"/>
             <Canvas x:Name="Layer1" Width="210" HorizontalAlignment="Left">
                 <Path Data="F1M160.005,24L0,24 0,0 160.005,0z" Fill="#FFD72329" Height="24" Canvas.Left="0" Canvas.Top="0.019" Width="160.005"/>
                 <Path Data="F1M15.459,7.729C15.459,11.999 11.998,15.458 7.73,15.458 3.46,15.458 0,11.999 0,7.729 0,3.46 3.46,0 7.73,0 11.998,0 15.459,3.46 15.459,7.729" Fill="White" Height="15.458" Canvas.Left="9.175" Canvas.Top="3.92" Width="15.459"/>
@@ -19,7 +20,7 @@
                     <Path Data="F1M3.594,7.86L2.312,7.86 2.312,1.11 0,1.11 0,0 5.906,0 5.906,1.11 3.594,1.11 3.594,7.86" Fill="White" Height="7.859" Canvas.Left="175.833" Canvas.Top="0.109" Width="5.906"/>
                 </Canvas>
             </Canvas>
-            
+
             <Canvas x:Name="TextBlock10" Height="9" Width="48.897">
                 <Path Data="F1M2.313,5C1.594,5 1.016,4.781 0.61,4.344 0.203,3.906 0,3.313 0,2.531 0,1.766 0.188,1.156 0.578,0.688 0.953,0.235 1.469,0 2.125,0 2.719,0 3.203,0.203 3.547,0.594 3.891,1 4.078,1.516 4.078,2.172L4.078,2.625 0.766,2.625C0.766,3.203 0.906,3.641 1.188,3.922 1.453,4.219 1.828,4.36 2.328,4.36 2.844,4.36 3.36,4.25 3.875,4.031L3.875,4.688C3.61,4.797 3.36,4.875 3.141,4.922 2.906,4.969 2.625,5 2.313,5 M2.11,0.61C1.719,0.61 1.406,0.75 1.188,1 0.953,1.25 0.813,1.594 0.781,2.031L3.297,2.031C3.297,1.578 3.188,1.235 2.985,0.985 2.781,0.735 2.485,0.61 2.11,0.61" Fill="#FF2D2D2D" Height="5" Canvas.Left="0" Canvas.Top="1.937" Width="4.078"/>
                 <Path Data="F1M4.922,6.453L4.125,4.407 1.547,4.407 0.75,6.453 0,6.453 2.547,0 3.172,0 5.703,6.453 4.922,6.453 M3.89,3.735L3.14,1.75C3.047,1.5 2.937,1.188 2.844,0.813 2.781,1.094 2.687,1.407 2.562,1.75L1.812,3.735 3.89,3.735" Fill="#FF2D2D2D" Height="6.453" Canvas.Left="4.886" Canvas.Top="0.39" Width="5.703"/>
@@ -32,7 +33,7 @@
                 <Path Data="F1M3.282,4.906L3.282,1.797C3.282,1.406 3.188,1.11 3.016,0.922 2.829,0.735 2.563,0.625 2.188,0.625 1.672,0.625 1.297,0.766 1.063,1.031 0.829,1.313 0.719,1.75 0.719,2.375L0.719,4.906 0,4.906 0,0.094 0.579,0.094 0.704,0.75 0.735,0.75C0.891,0.516 1.094,0.328 1.36,0.203 1.625,0.078 1.922,0 2.266,0 2.844,0 3.282,0.141 3.579,0.422 3.86,0.703 4.016,1.156 4.016,1.766L4.016,4.906 3.282,4.906" Fill="#FF2D2D2D" Height="4.906" Canvas.Left="39.065" Canvas.Top="1.937" Width="4.016"/>
                 <Path Data="F1M4.547,0.094L4.547,0.547 3.657,0.656C3.735,0.766 3.813,0.906 3.875,1.063 3.938,1.235 3.969,1.422 3.969,1.625 3.969,2.094 3.797,2.469 3.485,2.75 3.157,3.031 2.719,3.172 2.157,3.172 2,3.172 1.875,3.172 1.75,3.141 1.438,3.297 1.282,3.5 1.282,3.75 1.282,3.891 1.329,3.985 1.438,4.047 1.547,4.11 1.735,4.141 2.016,4.141L2.86,4.141C3.375,4.141 3.782,4.25 4.063,4.469 4.344,4.688 4.485,5 4.485,5.422 4.485,5.953 4.266,6.36 3.844,6.641 3.407,6.922 2.782,7.063 1.969,7.063 1.344,7.063 0.86,6.938 0.516,6.703 0.172,6.469 0,6.141 0,5.719 0,5.422 0.094,5.172 0.282,4.953 0.469,4.75 0.735,4.61 1.079,4.531 0.954,4.469 0.844,4.391 0.766,4.266 0.672,4.156 0.641,4.016 0.641,3.86 0.641,3.688 0.688,3.531 0.782,3.406 0.875,3.281 1.016,3.141 1.219,3.016 0.969,2.922 0.766,2.75 0.61,2.5 0.454,2.25 0.375,1.969 0.375,1.656 0.375,1.125 0.532,0.719 0.844,0.438 1.157,0.156 1.61,0 2.204,0 2.454,0 2.672,0.031 2.875,0.094L4.547,0.094 M0.704,5.719C0.704,5.969 0.813,6.172 1.032,6.313 1.25,6.438 1.563,6.516 1.985,6.516 2.579,6.516 3.032,6.422 3.329,6.235 3.625,6.047 3.782,5.797 3.782,5.485 3.782,5.219 3.688,5.031 3.532,4.938 3.375,4.844 3.063,4.797 2.625,4.797L1.75,4.797C1.407,4.797 1.157,4.875 0.969,5.031 0.782,5.188 0.704,5.406 0.704,5.719 M1.094,1.625C1.094,1.969 1.188,2.235 1.375,2.406 1.563,2.578 1.829,2.656 2.172,2.656 2.891,2.656 3.25,2.313 3.25,1.625 3.25,0.906 2.891,0.531 2.172,0.531 1.829,0.531 1.563,0.625 1.375,0.813 1.188,1 1.094,1.281 1.094,1.625" Fill="#FF2D2D2D" Height="7.063" Canvas.Left="44.35" Canvas.Top="1.937" Width="4.547"/>
             </Canvas>
-            
+
             <Canvas x:Name="Layer2" Width="100" HorizontalAlignment="Right">
                 <Button Height="20" Canvas.Left="0" Canvas.Top="2" Width="32" Background="{x:Null}" BorderThickness="0" BorderBrush="White" Click="Button_Minimize">
                     <Path Data="F1M7.2,2.5L0,2.5 0,0 7.2,0z" Fill="#FF808180" Height="2.5" Width="7.2"/>
@@ -48,8 +49,37 @@
                 </Button>
             </Canvas>
         </Grid>
-        <Grid>
-            
+        <Grid Name="mainGrid" Margin="0,54,0,0">
+            <TabControl Height="461" HorizontalAlignment="Left" Margin="141,0,0,0" Name="tabControl1" VerticalAlignment="Top" Width="617"
+            ItemsSource="{Binding Tabs}"
+            SelectedItem="{Binding SelectedTab}">
+                <!--Bind the SelectionChanged event of the tab-->
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectedChangedCommand}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <!--Header section-->
+                <TabControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Header}" Margin="0 0 20 0"/>
+                            <Button Content="X"
+                                Command="{Binding RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type TabControl}},
+                                Path= DataContext.CloseTabCommand}"
+                                Width="10" Height="10" FontWeight="UltraBold" Background="#FF6699" FontSize="5"
+                                Foreground="White" Visibility="{Binding CloseButtonVisibility}"/>
+                        </StackPanel>                        
+                    </DataTemplate>
+                </TabControl.ItemTemplate>
+
+                <!--Content section-->
+                <TabControl.ContentTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Content}" />
+                    </DataTemplate>
+                </TabControl.ContentTemplate>                
+            </TabControl>      
         </Grid>
     </Grid>
 </Window>
