--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/MainApplication.xaml
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/View/MainApplication.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         Title="MainApplication" 
-        MinHeight="800" MinWidth="1000" AllowsTransparency="True" WindowStyle="None" ResizeMode="CanResizeWithGrip"
+        Height="1024" MinHeight="800" Width="1280" MinWidth="1000" AllowsTransparency="True" WindowStyle="None" ResizeMode="CanResizeWithGrip"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen">
     <Grid>
@@ -59,9 +59,8 @@
         </Grid>
         
         <Grid Name="mainGrid" Margin="0,54,0,0">
-            <TabControl Height="461" HorizontalAlignment="Left" Margin="141,0,0,0" Name="tabControl1" VerticalAlignment="Top" Width="617"
-            ItemsSource="{Binding Tabs}"
-            SelectedItem="{Binding SelectedTab}">
+            <TabControl Height="947" HorizontalAlignment="Left" Margin="251,0,0,0" Name="tabControl1" VerticalAlignment="Top" Width="1015"
+            ItemsSource="{Binding Tabs}" SelectedItem="{Binding SelectedTab}">
                 <!--Bind the SelectionChanged event of the tab-->
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
@@ -88,7 +87,17 @@
                         <TextBlock Text="{Binding Content}" />
                     </DataTemplate>
                 </TabControl.ContentTemplate>                
-            </TabControl>      
+            </TabControl>
+            <TabControl Height="947" HorizontalAlignment="Left" Margin="251,0,0,0" VerticalAlignment="Top" Width="1000">
+                <TabItem Header="Employee">
+                    <Grid Background="Gray"></Grid>
+                </TabItem>
+                <TabItem Header="Search">
+                    <Grid Background="Gray">
+                        
+                    </Grid>
+                </TabItem>
+            </TabControl>
         </Grid>
     </Grid>
 </Window>
